package br.unitins.topicos1.cafe.model;

public enum TipoCafe {
    GRAO,
    MOIDO,
    CAPSULA
}
