package br.unitins.topicos1.cafe.model;

public enum TipoMoagem {
    FINA,
    MEDIA,
    GROSSA
}
