package br.unitins.topicos1.cafe.model;

public enum TipoTorra {
    CLARA,
    MEDIA,
    ESCURA
}
